Added color button

--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>Coffee</title>
-	<link rel="stylesheet" href="css/main.css">
+  <meta charset="UTF-8">
+  <title>CoffeeScript is my Favourite!</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-	<script type="text/javascript" href="js/main.js"></script>
+<div>
+	<div class="wrapper">
+  <button type="button" class="btn btn-success" id="bgBtn">Click</button>
+  </div>
+</div>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script type="text/javascript" src="js/main.js"></script>
+
 </body>
 </html>
